# pytest-webreportlog

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  run.py  server.sh  test_exceptions.jsonl
.github/workflows/: checks.yml
src/: __init__.py
src/app/: __init__.py  cli.py  database.py  formatter.py  main.py  models.py  parser.py  streaming.py  templates_config.py  utils.py
src/app/routes/: __init__.py  history.py  sessions.py  streaming.py
src/app/services/: __init__.py  entry_builder.py
src/app/templates/: _test_entry.html  base.html  history.html  history_overview.html  index.html  session.html
test_sample/: conftest.py  pytest.ini  test_exceptions.py  test_module_a.py  test_parametrize.py  test_skips.py  test_strict_xfail.py  test_xfail_xpass.py
test_sample/dir1/: test_module_a.py
tests/: __init__.py  conftest.py  test_formatter.py  test_packaging.py  test_parser.py  test_streaming.py  test_template_filters.py
tests/manual/: test_sse.py
tests/plugin/: conftest.py  test_plugin.py
tests/reports/: __init__.py  conftest.py  report_utils.py  test_html_report.py  test_junit_xml.py
tests/server/: test_db_stats.py  test_facets.py  test_formatter.py  test_retention.py  test_streaming.py  test_template_filters.py
tests/server/web/: README.md  conftest.py  jsonl_builder.py  test_attribute_filters.py  test_duration.py  test_e2e_plugin.py  test_edge_cases.py  test_error_handling.py  test_history.py  test_history_duplicates.py  test_html_comparison.py  test_prune.py  test_session_api.py  test_session_html.py  test_stats.py  test_streaming_api.py
tests/web/: README.md  __init__.py  conftest.py  test_duration.py  test_edge_cases.py  test_error_handling.py  test_history.py  test_history_duplicates.py  test_html_comparison.py  test_session_api.py  test_session_html.py  test_streaming_api.py  test_web_server.py
