[project]
name = "pytest-webreportlog"
version = "0.1.0"
description = "Web service for viewing pytest-reportlog JSONL reports"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.2",
    "pytest-reportlog",
    "pytest-html>=4.1.1",
    "ruff>=0.14.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "requests>=2.32.0",
    "ansi2html>=1.9.2",
]

[tool.uv.sources]
pytest-reportlog = { path = "../pytest-reportlog", editable = true }
